# Events-Service

./: .gitmodules  Cargo.toml  Dockerfile.assembly  Makefile
.github/workflows/: main.yml
src/: events_controller.rs  events_management.rs  main.rs
tests/: test_events.py
