[package]
name = "Events-Service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
console_log = "1.0.0"
log = "0.4.22"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
rand = "0.8.5"
rouille = "3.6.2"
serde = {version = "1.0.215",  features=["derive", "serde_derive"]}
serde_json = "1.0.133"
simple_logger = "5.0.0"
